# gestortareas

./: .gitignore  PROMPTS_REFACTORIZACION.md  PROMPTS_TALLER260108.txt  PROMPTS_TALLER260115.txt  README.md  gestor_tareas.py  ing_inversa _prompts.md  interfaz_consola.py  main.py  pyproject.toml  requirements.txt  tareas.py  usuarios.py  utils.py
api/: app.py
api/templates/: base.html  dashboard.html  index.html  login.html
core/: __init__.py  gestor.py
test/: test_schemas.py
