[project]
name = "gestortareas"
version = "0.1.0"
description = "Sistema de gestión de tareas con autenticación de usuarios"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Usuario", email = "usuario@example.com" }
]
dependencies = [
    "pydantic>=2.0.0",
    "bcrypt>=4.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]
web = [
    # Dependencias para implementación web futura
    # "fastapi>=0.100.0",
    # "uvicorn[standard]>=0.22.0",
    # "jinja2>=3.1.0",
    # "python-multipart>=0.0.6",
    # "itsdangerous>=2.1.0",
    # "httpx>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
